styles.css
body {
  background: linear-gradient(0deg, #cfbeff 0%, #c2f2f2 73%, #defbfb 100%);
}

::selection {
  background: #cfbeff;
}

@media (prefers-reduced-motion: no-preference) {
  .hidden {
    opacity: 0;
    filter: blur(0);
    transform: translateY(-50%);
    transition: opacity 1s, filter 1s, transform 1s;
  }
  #tagline.hidden {
    transition-delay: 1s;
  }
  header div h2:after {
    animation: blink 1.2s step-end infinite;
  }
  .down-arrow {
    animation: bounce 2s infinite;
    animation-timing-function: cubic-bezier(0.28, 0.84, 0.42, 1);
  }
  @keyframes blink {
    50% {
      opacity: 0;
    }
  }
  @keyframes bounce {
    0% {
      transform: scale(1, 1) translateY(0) rotate(45deg);
    }
    10% {
      transform: scale(1.1, 0.8) translateY(0) rotate(45deg);
    }
    30% {
      transform: scale(0.8, 1.2) translateY(-2.5rem) rotate(45deg);
    }
    40% {
      transform: scale(1.05, 0.95) translateY(0) rotate(45deg);
    }
    55% {
      transform: scale(0.9, 1.1) translateY(-1rem) rotate(45deg);
    }
    70% {
      transform: scale(1, 1) translateY(0) rotate(45deg);
    }
    80% {
      transform: scale(1, 1) translateY(0) rotate(45deg);
    }
    100% {
      transform: scale(1, 1) translateY(0) rotate(45deg);
    }
  }
}
.show {
  opacity: 1;
  filter: blur(0);
  transform: translateX(0);
}

a {
  text-decoration: none;
  color: #000000;
  transition: color 0.4s;
}

nav {
  font-family: "Fira Code", monospace;
  background-color: #f9fefe;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.22);
  position: fixed;
  width: 100%;
  z-index: 1;
}
nav .nav-link {
  font-size: 1.5rem;
}
nav .nav-logo {
  color: #470c8f;
  font-size: 2rem;
  font-weight: bold;
}
nav .nav-link:hover, nav .nav-logo:hover {
  color: #c99feb;
  transition: color 0.4s;
}
nav .cv-btn {
  background-color: #470c8f;
  color: #f9fefe;
}
nav .cv-btn:hover {
  background-color: #c99feb;
  color: #470c8f;
  transition: color 0.4s;
  transition: background-color 0.4s;
}

#about, #portfolio, #contact {
  scroll-margin-top: 5.2rem;
}

header div {
  color: #470c8f;
}
header div h1 {
  font-family: "Poppins", sans-serif;
  font-size: 8rem;
}
header div h2 {
  font-family: "Fira Code", monospace;
  text-transform: lowercase;
}
header div h2:before {
  content: ">";
}
header div h2:after {
  content: "_";
  opacity: 1;
}

.grid {
  display: grid;
  grid-template-rows: 4fr 1fr;
}

.about-grid {
  display: grid;
  grid-template-rows: 2fr 1fr;
}

.arrow-container {
  width: 6rem;
  height: 6rem;
}

.arrow-container:hover {
  cursor: pointer;
}
.arrow-container:hover .down-arrow {
  border-color: #c99feb;
}

.down-arrow {
  width: 2.5rem;
  height: 2.5rem;
  border: solid #470c8f;
  border-width: 0 0.3rem 0.3rem 0;
  transform: rotate(45deg);
}

.section-title {
  font-family: "Poppins", sans-serif;
  color: #470c8f;
  font-weight: 400;
}

h4 {
  font-family: "Poppins", sans-serif;
}

.about-text {
  background-color: rgba(255, 255, 255, 0.6);
}

.project {
  background-color: rgba(255, 255, 255, 0.6);
}
.project a:hover {
  color: #2fcaca;
}
.project .project-links a {
  text-decoration: underline;
}

.contact-container {
  background-color: rgba(255, 255, 255, 0.6);
}
.contact-container .contact-links a:hover {
  color: #2fcaca;
}

footer {
  color: #470c8f;
  background-color: #f9fefe;
}

@media screen and (max-width: 992px) {
  header div h1 {
    font-size: 6rem;
  }
}

/*# sourceMappingURL=styles.css.map */

